processed/jira/txt/LU/LU-17945.txt
Key:        LU-17945
Summary:    error: no previous prototype for 'nla_extract_val'
Link:       https://jira.whamcloud.com/browse/LU-17945
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Jian Yu
Reporter:   Jian Yu
Created:    Wed, 12 Jun 2024 21:34:20 +0000
Updated:    Tue, 25 Jun 2024 06:39:22 +0000
Resolved:   Tue, 25 Jun 2024 06:39:22 +0000

--- Description ---
While building Ubuntu 24.04 on master branch, it failed as follows:

  CC [M]  /root/lustre-release/lnet/lnet/api-ni.o
/root/lustre-release/lnet/lnet/api-ni.c:2888:1: error: no previous prototype for ‘nla_extract_val’ [-Werror=missing-prototypes]
 2888 | nla_extract_val(struct nlattr **attr, int *rem,
      | ^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors

The issue was introduced by the following commit:

commit 629d80dff84e885e4efabba1a77237805e5cffa7
Author:     James Simmons 
AuthorDate: Thu May 23 17:25:30 2024 -0400
Commit:     Oleg Drokin 
CommitDate: Wed Jun 5 04:44:20 2024 +0000

    LU-10003 lnet: migrate fail nid to Netlink

--- Comment (yujian, Tue, 25 Jun 2024 06:39:22 +0000) ---
Landed for Lustre 2.16.0.

--- Comment (gerrit, Tue, 25 Jun 2024 03:32:55 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/55413/

Subject: LU-17945 lnet: fix nla_extract_val() -Werror=missing-prototypes

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 3e8d005bc94d82dfc8010df5350fbf4938a4e547

--- Comment (gerrit, Wed, 12 Jun 2024 21:49:18 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/55413

Subject: LU-17945 lnet: fix nla_extract_val() -Werror=missing-prototypes

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 496732527f3f9fa2a1c2c667f969265c49f38521
